# medspa-api

./: .coveragerc  .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  README.md  agents.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh
.github/workflows/: tests.yml
app/: config.py  exceptions.py  logging_config.py  main.py
app/api/: exception_handlers.py
app/api/routes/: appointments.py  medspas.py  services.py
app/db/: __init__.py  database.py
app/models/: __init__.py  models.py
app/repositories/: __init__.py  appointment_repository.py  medspa_repository.py  service_repository.py
app/schemas/: appointments.py  medspas.py  pagination.py  services.py
app/services/: appointment_service.py  medspa_service.py  offerings_service.py
app/utils/: query.py  ulid.py
sql/: schema.sql  seed.sql
tests/: conftest.py
tests/integration/: test_appointments_api.py  test_medspas_api.py  test_query.py  test_services_api.py
tests/integration/repositories/: test_appointment_repository.py  test_medspa_repository.py  test_service_repository.py
tests/unit/: test_appointment_service.py  test_database.py  test_medspa_service.py  test_offerings_service.py  test_query.py  test_schemas_appointments.py  test_schemas_medspas.py
tests/unit/repositories/: test_appointment_repository.py  test_medspa_repository.py  test_service_repository.py
